# real-state

./: .env.example  .gitignore  LICENSE  PLAN-SALE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: _probe_detail_type.py  _probe_types.py  _probe_url.py  create_rent_db.json  rental-finder-buy.xml  rental-finder-rent.xml  run_buy_daily.cmd  run_daily.cmd  setup_notion.py
src/rental_finder/: __init__.py  cli.py  config.py  geo.py  http_client.py  models.py  notion_store.py  pipeline.py  scheduler.py
src/rental_finder/sources/: __init__.py  base.py  quintoandar.py  zapimoveis.py
tests/: test_config.py  test_filters.py  test_geo.py
