[project]
name = "rental-finder"
version = "0.1.0"
description = "Scraper for São Paulo rental listings (zapimoveis + quintoandar) → Notion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "curl-cffi>=0.15.0",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "notion-client>=3.0.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
rental-finder = "rental_finder.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
